Synchronization with Github repository (w/ removal of LuaDocumentor and its dependencies).
Squashed commit of the following:

commit f97172f8f145ea6ffdfa8d820e983c34f6ef1e7b
Author: Kevin KIN-FOO <kkinfoo@sierrawireless.com>
Date:   Thu May 10 11:09:44 2012 +0200

    Increasing h1 css top-margin.

commit 826d0a1c4d47561e00444f9fa3353adac953cac8
Author: Kevin KIN-FOO <kkinfoo@sierrawireless.com>
Date:   Wed May 9 16:58:41 2012 +0200

    BUGFIX: [luadocumentor] Documentation elements can now have empty description.

commit 78f6c7eac5abf8885f1a166b133b3c617cbed282
Author: Kevin KIN-FOO <kkinfoo@sierrawireless.com>
Date:   Tue Apr 24 19:19:54 2012 +0200

    Fixing function type definition indexing

commit 31bda757f97b7bda7860ce72aeedaa21fb3da9aa
Author: Kevin KIN-FOO <kkinfoo@sierrawireless.com>
Date:   Thu Apr 19 18:52:13 2012 +0200

    Module summaries are now alphabetically sorted.

commit 421e58475c920a049c70e00be0bbbfddb3fa292b
Merge: ede7194 f2a1d3a
Author: Benjamin Cabé <BCabe@sierrawireless.com>
Date:   Tue Apr 24 14:25:13 2012 +0200

    Merge branch 'master' into executionenvironment

commit ede71943628d17fd1111da5f02e7c1775a5b3bbc
Merge: 92e751a da47480
Author: Benjamin Cabé <BCabe@sierrawireless.com>
Date:   Tue Apr 24 12:38:03 2012 +0200

    Merge remote-tracking branch 'github-sierra-origin/master' into executionenvironment

    Conflicts:
    	plugins/org.eclipse.koneki.ldt.editor/src/org/eclipse/koneki/ldt/editor/internal/text/ILuaColorConstants.java
    	plugins/org.eclipse.koneki.ldt.editor/src/org/eclipse/koneki/ldt/editor/internal/text/LuaPreferenceInitializer.java
    	plugins/org.eclipse.koneki.ldt.editor/src/org/eclipse/koneki/ldt/editor/preference/internal/ui/LuaEditorColoringConfigurationBlock.java
    	plugins/org.eclipse.koneki.ldt.ui/OSGI-INF/l10n/bundle.properties
    	plugins/org.eclipse.koneki.ldt.ui/plugin.xml
    	plugins/org.eclipse.koneki.ldt.ui/src/org/eclipse/koneki/ldt/ui/preferences/Messages.java
    	plugins/org.eclipse.kone